# opencv_face

./: CMakeLists.txt
include/: readme.txt
lib/: readme.txt
src/: CMakeLists.txt  readme.txt  test.cpp
